syntax = "proto3";

service User {
    rpc SayHello(HelloRequest) returns(HelloResponse){}
    rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){}
    rpc GetUserInfoByID(GetUserInfoByIDRequest) returns(GetUserInfoByIDResponse){}
    rpc VerifyUserIdentity(VerifyUserIdentityRequest) returns(VerifyUserIdentityResponse){}

}
message CommonResponse{
    int32 code  = 1;
    string info  = 2;
}
message HelloRequest{
    string name = 1;
}
message HelloResponse{
    string name = 1;
}
message CreateUserRequest{
    string name =1;
    string phone = 2;
    string e_mail = 3;
    string college = 4;
    string password = 5;
}
message CreateUserResponse{
    CommonResponse  basic = 1;
    UserInfo user = 2;
}
message GetUserInfoByIDRequest{
    int64 uid = 1;
}
message GetUserInfoByIDResponse{
    CommonResponse  basic = 1;
    UserInfo user  = 2;
}
message UserInfo{
    int64 uid = 1;
    string name = 2;
    string phone = 3;
    string college = 4;
    string e_mail = 5;
}

message VerifyUserIdentityRequest{
    string UserName =1;
    string Password = 2;
}
message VerifyUserIdentityResponse{
    CommonResponse basic = 1;
    UserInfo user = 2;
}